--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   },
   "homepage": "https://github.com/Skychute/ts-node-starter#readme",
   "dependencies": {
-    "@types/node": "^10.9.4",
+    "@types/progress": "^2.0.1",
     "babel-polyfill": "^6.16.0",
     "babel-runtime": "^6.11.6",
+    "microtime": "^2.1.8",
+    "progress": "^2.0.0",
     "reflect-metadata": "^0.1.12",
     "source-map-support": "^0.5.4",
     "typescript": "^2.8.1",
@@ -37,6 +39,8 @@
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
+    "@types/microtime": "^2.1.0",
+    "@types/node": "^10.9.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
