--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test-w": "npm run jest -- --watchAll",
     "prestart": "npm run build",
-    "start": "node lib/app",
+    "start": "node lib/formalGrammar2",
     "start-w": "ts-node-dev --inspect=`if [ -z \"${DEBUG_PORT}\" ]; then echo \"9229\"; else echo \"${DEBUG_PORT}\"; fi` --type-check --no-deps --no-cache src/app",
     "lint": "./node_modules/.bin/tslint src/**/*.ts",
     "test": "npm run jest",
@@ -29,8 +29,10 @@
     "@types/progress": "^2.0.1",
     "babel-polyfill": "^6.16.0",
     "babel-runtime": "^6.11.6",
+    "ebnf": "^1.6.3",
     "microtime": "^2.1.8",
     "progress": "^2.0.0",
+    "readline-sync": "^1.4.9",
     "reflect-metadata": "^0.1.12",
     "source-map-support": "^0.5.4",
     "typescript": "^2.8.1",
